require auth for addAPIKey and fetchMatchConfig
