# src/routes/addAPIKey.ts
@@ -1,16 +1,10 @@
-import { validate, Joi } from 'express-validation';
 import uuidAPIKey from 'uuid-apikey';
 import UserReturnData from '../UserReturnData';
 import StatusCodes from '../StatusCodes';
 
 module.exports = (app, dbHandler, auth) => {
-  const validation = {
-    body: Joi.object({
-      team: Joi.string().required(),
-    }),
-  }
-  app.post('/api/addAPIKey', auth.noAPIKey, auth.checkAuth, validate(validation, { keyByField: true }, { allowUnknown: true }), async (req: any, res:any) => {
-    const { team } = req.body;
+  app.post('/api/addAPIKey', auth.noAPIKey, auth.checkAuth, async (req: any, res:any) => {
+    const { team } = res.locals;
     let val: UserReturnData = new UserReturnData();
     const clientInfo = await uuidAPIKey.create();
     val = await dbHandler.addKey(req.db, clientInfo.uuid, clientInfo.apiKey, team).catch((e) => { console.error(e); val.err_occur = true; });
